# towards_mmskills

./: .gitignore  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  cases.html  index.html  pyproject.toml  requirements.txt  skills.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
assets/: cases.css  cases.js  site.css  skill-library.css  skill-library.js
assets/case-studies/: README.md  manifest.json
assets/case-studies/case_01_calc_merged_headers_qwen3/: captions.json  case_notes.md  metadata.json
assets/case-studies/case_02_vscode_install_vsix_qwen3/: captions.json  case_notes.md  metadata.json
assets/case-studies/case_03_gimp_move_text_box_geminipro31/: captions.json  case_notes.md  metadata.json
assets/case-studies/case_04_calc_clustered_chart_geminipro31/: captions.json  case_notes.md  metadata.json
assets/skill-library/: skills-data.js
mm_agents/: _mm_skill_adapter_base.py  _mm_skill_base.py  _mm_skill_long_plan.py  _mm_skill_planner.py  _mm_skill_state_cards.py  agent.py  gemini_agent.py  gemini_skill_agent.py  gemini_text_skill_agent.py  general_agent.py  general_skill_agent.py  general_text_skill_agent.py  mm_skill_agent.py  skill_loader.py  task_skill_resolver.py
mm_agents/utils/: qwen_vl_utils.py
osworld_integration/: README.md  lib_results_logger.py  lib_run_single.py  run.py
scripts/: build_case_study_site.py  build_skill_library_site.py  install_into_osworld.py  sync_from_sources.py
skills_library/: README.md
task_skill_mappings/: README.md  task_skill_mapping.json
(+87 files in other folders)
